# lesson_code_archive

Compilers/lab1/谭勇20194278-编译原理实验一/: output.txt  testfile.txt  ty-lab1.cpp  谭勇20194278-编译原理实验一报告.docx
Compilers/lab2/谭勇-20194278-lab2/: grammer.cpp
Compilers/lab3/谭勇20194278-lab3/: lab3.cpp  谭勇20194278-lab3.docx
Compilers/lab4/提交文件/: lab4.cpp  谭勇20194278-lab4.docx
ML/lab1/: Watermelon_data.xls  test1.py  实验1.7z
ML/lab2/: BP_iris.py  moon_test.csv  moons.csv  new.csv  test.py  实验2.7z
ML/lab3/: gini.py  test.py  实验3.7z
a01/a01_imu/: imu_filter.cpp  imu_track.cpp
a02/demo/eigen/: CMakeLists.txt
a02/demo/eigen/src/: block.cpp  dynamic_resize.cpp  matrix_array.cpp
a02/demo/googletest/: CMakeLists.txt  test.cpp
a02/practice/lab1/: smartCar.cpp  smartCar.h
b02/a_star_algorithm/: Astar.py  Dijstra.py  a_star.py  main.py
b02/lab1/: CMakeLists.txt
b02/lab1/src/: ndt.cpp
b02/lab2/code/CNN-for-MNIST_Pytorch/: CNN_for_MNIST.pth  TestCNN.py  cnn_mnist.py  network.py  train.py  train_iter.py  vggnet.py
b02/lab2/code/p1/ch2/: 2_pre_trained_networks.ipynb
b02/lab2/code/p1/ch3/: tensor.ipynb
b02/lab2/code/p1/ch5/: 1_parameter_estimation.ipynb
b02/lab2/code/p1/ch6/: nn.ipynb
b02/lab2/code/practice/: MNIST.ipynb
b02/lab2/code/practice/log/: events.out.tfevents.1676993576.Lucass-MacBook-Air.local.32627.0  events.out.tfevents.1676993671.Lucass-MacBook-Air.local.32627.1  (+6 more)
b02/lab2/code/python_basis/basis/: basis.ipynb  (+1 more)
数据工程/1. python库使用练习/: cv.py  image_similar_search.py  opencv_image.ipynb  pic_cut.py  pillow_image.ipynb  threshold_learn.py
(+13 files in other folders)
